# CG

./: .gitattributes  README.md
Guiao01/: CMakeLists.txt  README.md  main.cpp
Guiao02/: CMakeLists.txt  README.md  main.cpp
Guiao03/: CMakeLists.txt  README.md  main.cpp
Guiao04/: CMakeLists.txt  README.md  main.cpp
Guiao05/: CMakeLists.txt  README.md  main.cpp
Guiao06/: CMakeLists.txt  README.md  main.cpp
Guiao09/: CMakeLists.txt  README.md  main.cpp
Guiao11/: README.md  main.cpp
TrabalhoPratico/: README.md
TrabalhoPratico/FaseI/: CMakeLists.txt  README.md  build.sh
TrabalhoPratico/FaseI/models/: README.md  box.3d  box_div.3d  cone_down.3d  cone_up.3d  plane.3d  sphere.3d
TrabalhoPratico/FaseI/relatorio/: main.tex
TrabalhoPratico/FaseI/scenes/: box_div.xml  cone_down.xml  cone_up.xml  example.xml
TrabalhoPratico/FaseII/: CMakeLists.txt  README.md  run.sh
TrabalhoPratico/FaseII/models/: torus.3d
TrabalhoPratico/FaseII/relatorio/: main.tex
TrabalhoPratico/FaseII/scenes/: solarsystem.xml  sphere.xml
TrabalhoPratico/FaseII/src/common/: vertex.cpp  vertex.hpp
TrabalhoPratico/FaseII/src/engine/: camera.cpp  camera.hpp  engine.cpp  group.cpp  group.hpp  parser.cpp  parser.hpp  shape.cpp  shape.hpp  transform.cpp  transform.hpp
TrabalhoPratico/FaseII/src/engine/tinyxml2/: tinyxml2.cpp
TrabalhoPratico/FaseII/src/generator/: generator.cpp
TrabalhoPratico/FaseIII/: CMakeLists.txt  README.md  build.sh  run.sh
TrabalhoPratico/FaseIII/models/: sphere.3d  teapot.3d
TrabalhoPratico/FaseIV/: CMakeLists.txt  README.md  run.sh
(+57 files in other folders)
